[main]: add basic security with jwt in HttpOnly cookie
